# brood

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  J1_SCHEDULER_BUG.md  LICENSE-EXCEPTION.md  Makefile  README.md  ROADMAP.md  configure  erl_crash.dump  project.blsp  project.lisp  repro_gc.blsp  rustfmt.toml  todo.md
.config/: nextest.toml
.github/workflows/: ci.yml
breakage/: chaos2_bigint_edge.blsp  chaos2_concurrency_gc.blsp  chaos2_dynamic_vars.blsp  chaos2_gc_under_send.blsp  chaos2_hot_reload.blsp  chaos2_jit_gc_interplay.blsp  chaos2_process_crash_propagation.blsp  chaos2_process_genserver.blsp  chaos2_process_links.blsp  chaos2_process_ring.blsp  chaos2_tcp_stress.blsp  chaos3_apply_seqview_uag.blsp  chaos3_jit_handle_across_safepoint.blsp  chaos_bignum.blsp  chaos_closure_hoarder.blsp  chaos_eval_wormhole.blsp  chaos_float_pathology.blsp  chaos_map_volcano.blsp  chaos_pattern_hell.blsp  chaos_process_hydra.blsp  chaos_string_cancer.blsp  chaos_type_blender.blsp  jit_breakage_test.blsp  jit_inline_throw_unwind.blsp
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: distribution.rs  observe_attach.rs  release_bundle.rs  serve_attach.rs
crates/lisp/: Cargo.toml  build.rs
crates/lisp/assets/: README.md
crates/lisp/benches/: eval.rs  library.rs  stdlib.rs
crates/lisp/fuzz/: Cargo.toml  README.md
crates/lisp/fuzz/fuzz_targets/: eval.rs  reader.rs
crates/lisp/src/: audio.rs  builtins.rs  bundle.rs  check.rs  cli_support.rs  dist.rs  env.rs  error.rs  eval.rs  gui.rs  gui_gpu.rs  heap.rs  introspect.rs  lib.rs  macros.rs  net.rs  perf.rs  printer.rs  proc.rs  process.rs  reader.rs  table.rs  text_width.rs  treesit.rs  types.rs  value.rs
crates/lisp/src/builtins/: bytes.rs  io.rs  mod.rs  numeric.rs  sequences.rs  system.rs  terminal.rs
crates/lisp/src/core/: alloc.rs  blob.rs  heap.rs  keywords.rs  map_champ.rs  mod.rs  sync.rs  value.rs
crates/lisp/src/eval/: compile.rs  macros.rs  mod.rs
crates/lisp/src/eval/compile/: ir.rs  jit_lower.rs  mod.rs
crates/lisp/src/jit/: mod.rs
crates/lisp/src/process/: io_source.rs  keywords.rs  links.rs  mailbox.rs  message.rs  monitor.rs  scheduler.rs  timer.rs
crates/lisp/src/syntax/: atom.rs  cst.rs  mod.rs  printer.rs  reader.rs  scanner.rs  scope.rs
crates/lisp/src/types/: check.rs  mod.rs
crates/lisp/src/types/check/: annot.rs  ctx.rs  guards.rs  hygiene.rs  protocol.rs  recursion.rs  sigs.rs  walk.rs
crates/lisp/tests/: basic.rs  check_string_structured.rs  concurrency_race.rs  differential.rs  gc.rs  gc_bignum_repro.rs  jit.rs  live_migration.rs  mem_limit.rs  pool_resize_after_start.rs  preemption.rs  reductions.rs  runtime_collector.rs  suite.rs  type_check_catalog.rs  vm_tail_arm_compaction.rs  work_stealing.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: code_actions.rs  completion.rs  definition.rs  defs.rs  diagnostics.rs  document_link.rs  folding.rs  formatting.rs  hover.rs  inlay_hints.rs  introspect.rs  line_index.rs  main.rs  module_ref.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature.rs  symbols.rs  workspace.rs  workspace_symbols.rs
crates/nest/: Cargo.toml  build.rs
crates/nest/src/: main.rs  mcp.rs  release.rs
crates/nest/tests/: run_main.rs
crates/repl/: Cargo.toml
crates/repl/src/: lib.rs
docs/: README.md  allocation-elimination.md  architecture.md  benchmarking.md  brood-debug-skill.md  brood-for-claude.md  brood-life-feedback-2026-06-13.md  building-an-editor.md  bytecode-vm.md  call-dispatch-and-hot-reload.md  claude-demo-findings.md  components.md  compute-frontier.md  concurrency-v2.md  concurrency.md  decisions.md  deferred.md  devlog-archive.md  devlog.md  distribution.md  error-codes.md  feedback-retro-game-of-life.md  findings-closure-promotion-overflow.md  frame-representation.md  gc-flush-panic-mcp-2026-05-31.md  gol-findings-2026-05-30.md  gui-font-gaps.md  handoff-blocking-io.md  handoff-eval-dispatch.md  handoff-gc.md  handoff-multi-arity.md  handoff-vm-callback-routing.md  handoff-vm-gc-memory.md  incarnations.md  interop.md  jit-float.md  jit-optimizing-tier.md  jit-stage1.md  jit-tier2.md  kernel-audit-2026-06-03.md  (+37 more)
docs/archive/: decisions-superseded.md  devlog-archive.md  scheduler-j1-deadlock.md
docs/benchmarks/: 2026-05-27T13-57-33Z.md  2026-05-27T14-31-54Z.md  2026-05-27T19-17-02Z.md  2026-05-27T21-51-55Z.md  2026-05-28T19-11-31Z.md  2026-05-28T19-21-51Z.md  2026-05-28T19-45-08Z.md  2026-05-28T20-16-17Z.md  2026-05-28T20-27-27Z.md  2026-05-28T22-09-50Z.md  2026-05-29T09-03-30Z.md  (+15 more)
examples/: font-zoom.blsp  life.blsp  node_client.blsp  node_server.blsp  processes.blsp  processes.lisp  tour.blsp  tour.lisp  webserver.blsp  wilhelm.blsp  wilhelm.lisp
scripts/: bench-ratio.sh  bench.sh  bench_ratio.py  fuzz_unbox.py  quickbench.sh
std/: agent.blsp  ansi.blsp  buffer.blsp  crypto.blsp  csv.blsp  datetime.blsp  diff.blsp  display.blsp  docs.blsp  encoding.blsp  eval-command.blsp  face.blsp  file.blsp  format.blsp  fuzzy.blsp  hash.blsp  hatch.blsp  highlight.blsp  http.blsp  io.blsp  json.blsp  keymap.blsp  layers.blsp  lineedit.blsp  log.blsp  mcp.blsp  multimap.blsp  observe.blsp  observer.blsp  package.blsp  pane.blsp  path.blsp  prelude.blsp  prelude.lisp  project.blsp  project.lisp  queue.blsp  regex.blsp  reload.blsp  repl.blsp  (+18 more)
tests/: adversarial_test.blsp  agent_test.blsp  ansi_test.blsp  arithmetic_edge_test.blsp  autogensym_test.blsp  blob_share_test.blsp  buffer_test.blsp  bytes_test.blsp  capture_test.blsp  chaos_test.blsp  concurrency_test.blsp  contract_test.blsp  crypto_test.blsp  csv_test.blsp  datetime_test.blsp  decimal_test.blsp  diff_test.blsp  display_test.blsp  dockerfile_test.blsp  docs_test.blsp  dotenv_test.blsp  dynamic_test.blsp  encoding_test.blsp  eval_command_test.blsp  exit_test.blsp  face_test.blsp  file_test.blsp  float_roundtrip_test.blsp  format_test.blsp  fuzzy_test.blsp  gen_test.blsp  grammar_test.blsp  hash_test.blsp  hatch_test.blsp  highlight_test.blsp  hot_reload_test.blsp  http_test.blsp  image_test.blsp  introspection_test.blsp  io_test.blsp  (+84 more)
(+68 files in other folders)
