[workspace]
resolver = "2"
members = ["crates/lisp", "crates/cli", "crates/nest", "crates/lsp"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Wilhelm Kirschbaum"]

# The runtime `nest release` appends an app to (ADR-038). Inherits `release` and
# squeezes the shipped binary: `strip` drops symbols + debug info; fat `lto` +
# a single codegen unit cross-module-inline and dead-code-eliminate the whole
# (lean, `--no-default-features`) tree. Built once and cached — changing the app
# only re-appends the archive, so LTO's cost is paid a single time. Kept off the
# default `release` profile so `make install` / benches stay fast to build.
[profile.release-lean]
inherits = "release"
strip = true
lto = true
codegen-units = 1

# What `make install` builds: an optimized binary that is `strip`ped but does NOT
# pay any LTO — parallel codegen keeps the build fast (no serial, minutes-long
# link). The local-install counterpart of `release-lean`: same stripping, none of
# the LTO build cost. Trade-off: the binary is bigger (~36 MB vs ~10 MB) because
# only fat LTO + codegen-units=1 dead-code-eliminates the big jit/gui/treesit dep
# tree — and thin LTO, measured, gave no size win here while building slower, so
# it's not worth it. `nest release` still uses fat-LTO `release-lean` for the
# shippable runtime. (A profile `strip` reliably strips the final binary;
# `RUSTFLAGS=-C strip` does not.)
[profile.release-fast]
inherits = "release"
strip = true
