[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "The Brood command-line REPL and file runner."

[[bin]]
name = "brood"
path = "src/main.rs"

[dependencies]
brood = { path = "../lisp" }
# Argument parsing + help text. The CLI is small enough to hand-roll, but
# we've already paid for one typo-detection bug from doing so — clap's
# typo suggestions and uniform `--foo=bar`/`--foo bar` handling pay for
# themselves. derive feature is the ergonomic path.
clap = { version = "4", features = ["derive"] }
