[package]
name = "brood"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "The Brood language: reader, evaluator, and core for a self-editing editor."

[lib]
name = "brood"
path = "src/lib.rs"

[features]
# A windowed (GUI) frontend for the M3 display/input seam (ADR-046), alongside
# the always-on terminal (crossterm) frontend. Off by default so the core lib —
# which `nest`/`brood-lsp` embed — pulls no windowing stack; opt in with
# `--features gui`. winit owns a native window + event loop, softbuffer gives a
# raw CPU framebuffer, and fontdue rasterises a monospace glyph grid. The display
# *protocol* is unchanged Brood data (render ops); these just paint it to a window
# instead of a terminal. See src/gui.rs and std/observe.blsp's `(observe)`.
gui = ["dep:winit", "dep:softbuffer", "dep:fontdue"]

[dependencies]
# Lock-free, append-only vector for the shared RUNTIME code region: stable
# references survive concurrent pushes, so many process threads read closure
# bodies lock-free while `def` appends new code (old versions never move/free —
# in-flight calls keep running them; Erlang-style hot reload). See docs/shared-code.md.
boxcar = "0.2"
# Stackful coroutines for the green-process scheduler (step 4b): each process runs
# in a coroutine that parks at `receive` and resumes on a worker thread, so the
# native recursive evaluator suspends without a rewrite. It does the stack-switch
# `unsafe` we'd otherwise hand-roll; swappable later. See docs/scheduler.md (ADR-018).
corosensei = "0.3"
# Small inline vectors for the per-call hot path: the argument vector and env-frame
# bindings are built on every function call and are almost always tiny (≤ a handful),
# so keeping them inline avoids a heap allocation per call — which also matters extra
# here because the byte-counting global allocator taxes every alloc with atomics.
smallvec = "1"
# HMAC-SHA256 for the node-link handshake (ADR-034 v2): the cookie isn't sent on
# the wire — each side proves possession of it by HMAC'ing a peer-supplied
# nonce, so an eavesdropper can't replay the value. Vetted RustCrypto crates;
# this is exactly the "don't roll your own" case the dependency rule allows.
hmac = "0.13"
sha2 = "0.11"
# Cryptographically-strong random nonces for the handshake. `getrandom` reads
# the OS RNG directly — no allocator, no global state, just bytes.
getrandom = "0.4"
# The text rope backing editor buffers (M2, ADR-045). A `ropey::Rope` is a
# B-tree of `Arc`-shared chunks: cloning is O(1) (bump refcounts) and edits are
# copy-on-write on the touched nodes only — so the immutable-data contract
# (ADR-026) holds *for free* (every edit returns a fresh rope; the original is
# untouched and shares unchanged structure). The one irreducible text mechanism
# the language can't bootstrap; everything above it (points/marks/buffers) is
# Brood. See docs/decisions.md ADR-045.
ropey = "1.6"
# The terminal frontend for the M3 display/input seam (ADR-046). crossterm gives
# raw mode, the alternate screen, key events, and styled cell output across
# platforms — the irreducible "drawing, I/O" mechanism architecture.md groups
# with the rope. The display *protocol* is Brood data (a vector of render ops);
# the `term-*` primitives are just the in-process frontend that paints it, so a
# remote/web frontend can implement the identical protocol later.
crossterm = "0.29"

# The optional `gui` frontend's stack (see the [features] note above). All three
# are pulled in only with `--features gui`; a default build links none of them.
winit = { version = "0.29", optional = true }
softbuffer = { version = "0.4", optional = true }
fontdue = { version = "0.9", optional = true }

[dev-dependencies]
# Lightweight microbenchmark harness for the interpreter core. Dev-only (the
# released library pulls nothing extra). Run with `cargo bench`.
divan = "0.1"

[[bench]]
name = "eval"
harness = false

[[bench]]
name = "library"
harness = false
