[package]
name = "brood"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "The Brood language: reader, evaluator, and core for a self-editing editor."

[lib]
name = "brood"
path = "src/lib.rs"

[features]
default = ["dev-tools", "treesit"]
# Dev/tooling surface baked into the runtime: the test framework (`test`), the
# process observer (`observer`), the agent/doc/hot-reload tooling (`mcp`/`docs`/
# `reload`), the interactive REPL (`repl`/`lineedit`), and the GC debug builtins
# (`gc-stats`/`gc-collect`/`gc-trace`/`runtime-collect`). On for `brood`/`nest`/
# tests. `nest release` builds the runtime *without* it (`--no-default-features`)
# so a shipped app carries no test/observer/debug code (ADR-038, docs/release.md).
dev-tools = []
# A windowed (GUI) frontend for the M3 display/input seam (ADR-046), alongside
# the always-on terminal (crossterm) frontend. Off by default so the core lib —
# which `nest`/`brood-lsp` embed — pulls no windowing stack; opt in with
# `--features gui`. winit owns a native window + event loop, softbuffer gives a
# raw CPU framebuffer, and cosmic-text shapes + rasterises glyphs (with font
# fallback and color emoji, via its bundled swash) into the monospace cell grid.
# The display *protocol* is unchanged Brood data (render ops); these just paint it
# to a window instead of a terminal. See src/gui.rs and std/observer.blsp's `(observe)`.
gui = ["dep:winit", "dep:softbuffer", "dep:cosmic-text", "clipboard"]
# OS clipboard access (the `clipboard-get` / `clipboard-set!` builtins), via `arboard`.
# Pulled in by `gui` (a windowed editor wants copy/paste with other apps), but its own
# feature so it can be enabled alone. Without it the builtins are graceful no-ops
# (`clipboard-get` → nil), so the lean runtime and headless tests link no clipboard
# stack. `arboard` keeps a process-lifetime handle so an X11/Wayland paste survives
# while the editor runs (the selection owner must stay alive to serve paste requests).
clipboard = ["dep:arboard"]
# VM work-attribution counters (src/perf.rs): allocations, call/IC hit-miss,
# prim inline-vs-fallback, self-tail-calls, env-get chain hops, tree-walker
# defers. Off by default — every counter compiles to nothing, so a normal/release
# build and the timing benches carry ZERO cost. Build with `--features perf-stats`
# to profile where the VM actually spends work (the bytecode-lowering gate: is it
# dispatch-, env-, or alloc-bound?), then read `(vm-stats)` / `BROOD_PERF_STATS=1`.
# This is a *counting* tool, not a timing one — the increments perturb timing, so
# read counts here and times from the (counter-free) benches. See docs/benchmarking.md.
perf-stats = []
# tree-sitter parsing for *foreign* languages — the `tree-sitter-parse` builtin
# (ADR: multi-language modes / ROADMAP §C). tree-sitter is the incremental,
# error-tolerant parser that produces, for Ruby/Elixir/…, the same positioned CST
# node shape (`{:kind :start :end :kids}`) Brood's own reader gives for `.blsp` —
# so `std/tool/sexp`'s structural navigation and the editor's mode services run
# over a foreign tree unchanged. The grammar crates carry vendored C parsers
# (their own ABI via `tree-sitter-language`), so this is a heavier native build;
# it's a runtime capability (a modern editor needs it), so it's in `default` and
# the lean `make install` adds it explicitly (`--features brood/treesit`), unlike
# the windowing stack which stays opt-in. Add a language = add one grammar crate
# here + one arm in `src/treesit.rs`.
treesit = ["dep:tree-sitter", "dep:tree-sitter-ruby", "dep:tree-sitter-elixir"]

[dependencies]
# The tree-sitter runtime + the Ruby/Elixir grammars (feature `treesit`). All
# three are pulled in only with `--features treesit`; a build without it links no
# parser. The grammar crates expose a `tree_sitter_language::LanguageFn` (`LANGUAGE`)
# that `tree_sitter::Language` converts from, decoupling them from the core version.
tree-sitter = { version = "0.26", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-elixir = { version = "0.3", optional = true }
# Lock-free, append-only vector for the shared RUNTIME code region: stable
# references survive concurrent pushes, so many process threads read closure
# bodies lock-free while `def` appends new code (old versions never move/free —
# in-flight calls keep running them; Erlang-style hot reload). See docs/shared-code.md.
boxcar = "0.2"
# Stackful coroutines for the green-process scheduler (step 4b): each process runs
# in a coroutine that parks at `receive` and resumes on a worker thread, so the
# native recursive evaluator suspends without a rewrite. It does the stack-switch
# `unsafe` we'd otherwise hand-roll; swappable later. See docs/scheduler.md (ADR-018).
corosensei = "0.3"
# Small inline vectors for the per-call hot path: the argument vector and env-frame
# bindings are built on every function call and are almost always tiny (≤ a handful),
# so keeping them inline avoids a heap allocation per call — which also matters extra
# here because the byte-counting global allocator taxes every alloc with atomics.
smallvec = "1"
# Arbitrary-precision integers (ADR: bignums). Brood ints are i64 in the common
# case (`Value::Int`); a value that overflows i64 promotes to a heap `BigInt`
# leaf, and demotes back to `Int` the moment a result fits again (the
# normalize invariant — a `BigInt` is always strictly outside the i64 range).
# Backs overflow-promoting +/-/*, division/mod, arbitrary-width bitwise ops, and
# unbounded bit-shifts (the Life bitboard wants one big int per row, shifted by
# the row width). `num-traits` for `Zero`/`Signed`/`ToPrimitive`; `num-integer`
# for `div_rem`/`Integer` on `BigInt`.
num-bigint = "0.4.6"
num-traits = "0.2"
num-integer = "0.1"
# HMAC-SHA256 for the node-link handshake (ADR-034 v2): the cookie isn't sent on
# the wire — each side proves possession of it by HMAC'ing a peer-supplied
# nonce, so an eavesdropper can't replay the value. Vetted RustCrypto crates;
# this is exactly the "don't roll your own" case the dependency rule allows.
hmac = "0.13"
sha2 = "0.11"
sha1 = "0.11"
md-5 = "0.11"
# Cryptographically-strong random nonces for the handshake. `getrandom` reads
# the OS RNG directly — no allocator, no global state, just bytes.
getrandom = "0.4"
# Node-link channel encryption (ADR-089): a Noise-style session that gives the
# steady-state node link confidentiality + per-frame integrity, closing ADR-081's
# cleartext/injection gap. `x25519-dalek` does the ephemeral ECDH (forward secrecy);
# `chacha20poly1305` is the per-frame AEAD (the Poly1305 tag *is* the per-frame MAC).
# The session key is derived (HKDF over the hmac/sha2 above) from the DH secret,
# authenticated by folding both ephemeral pubkeys into the existing cookie-HMAC.
# Vetted RustCrypto/dalek crates — the "don't roll your own crypto" case the
# dependency rule allows. See docs/distribution.md + ADR-089.
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
# The text rope backing editor buffers (M2, ADR-045). A `ropey::Rope` is a
# B-tree of `Arc`-shared chunks: cloning is O(1) (bump refcounts) and edits are
# copy-on-write on the touched nodes only — so the immutable-data contract
# (ADR-026) holds *for free* (every edit returns a fresh rope; the original is
# untouched and shares unchanged structure). The one irreducible text mechanism
# the language can't bootstrap; everything above it (points/marks/buffers) is
# Brood. See docs/decisions.md ADR-045.
ropey = "1.6"
# The terminal frontend for the M3 display/input seam (ADR-046). crossterm gives
# raw mode, the alternate screen, key events, and styled cell output across
# platforms — the irreducible "drawing, I/O" mechanism architecture.md groups
# with the rope. The display *protocol* is Brood data (a vector of render ops);
# the `term-*` primitives are just the in-process frontend that paints it, so a
# remote/web frontend can implement the identical protocol later.
crossterm = "0.29"
# TLS for `https` (ADR-062): rustls is pure-Rust (no system OpenSSL). webpki-roots
# bundles the Mozilla CA set, so no system trust store is needed. The socket layer
# (crate::net) wraps a rustls client connection behind the same `Value::Socket`
# handle, so the Brood code above the transport is unchanged. Default (aws-lc-rs)
# crypto provider — builds with cc + cmake.
rustls = "0.23"
webpki-roots = "1"

# The optional `gui` frontend's stack (see the [features] note above). All three
# are pulled in only with `--features gui`; a default build links none of them.
# COUPLING: winit and softbuffer must agree on a `raw-window-handle` version —
# softbuffer's `Surface<D, W>` is generic over the window-handle types winit's
# `Window` provides. winit 0.30 + softbuffer 0.4 both speak raw-window-handle 0.6.
# When bumping winit's *major*, bump softbuffer to a version on the same rwh line,
# else the surface won't accept the window. (winit majors also rewrite the
# event-loop API — the migration surface is `GuiApp` + `build_window` in gui.rs.)
# `make clippy` lints `--all-features`, so a mismatch is caught at the gate.
winit = { version = "0.30", optional = true }
softbuffer = { version = "0.4", optional = true }
# OS clipboard (text only). `default-features = false` drops the `image-data` default
# (no `image` crate pulled in); `wayland-data-control` adds Wayland support alongside the
# always-built X11 backend, matching winit's dual support. See the `clipboard` feature.
arboard = { version = "3", optional = true, default-features = false, features = ["wayland-data-control"] }
# Text shaping + glyph rasterisation for the GUI grid: cosmic-text does HarfBuzz-class
# shaping (so ZWJ emoji / flags / skin-tone sequences form one glyph), font fallback
# (a cluster the mono font lacks falls back to the bundled Noto Color Emoji), and color
# glyph rendering (CBDT/COLR) via its bundled swash. Replaces the per-char monochrome
# fontdue rasteriser. No windowing types, so no raw-window-handle coupling above.
cosmic-text = { version = "0.19", optional = true }
# Display-cell width (the `display-width` builtin) + grapheme-cluster segmentation
# (the renderer advances per cluster, not per codepoint). Always linked — tiny, no_std
# tables — so the width primitive is available in the lean runtime too.
unicode-width = "0.2"
unicode-segmentation = "1"

[dev-dependencies]
# Lightweight microbenchmark harness for the interpreter core. Dev-only (the
# released library pulls nothing extra). Run with `cargo bench`.
divan = "0.1"

[[bench]]
name = "eval"
harness = false

[[bench]]
name = "library"
harness = false
