[package]
name = "nest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Brood project tooling — scaffolding, test discovery, user config."

[[bin]]
name = "nest"
path = "src/main.rs"

[dependencies]
brood = { path = "../lisp" }
# JSON-RPC framing for `nest mcp`: read/write `Content-Length:`-framed JSON
# messages over stdio (the same shape LSP uses). MCP's surface is small
# enough that we roll the framing ourselves rather than pull in an
# MCP/LSP-shaped crate + async runtime — see ADR-036 / docs/mcp.md.
serde_json = "1"
