[package]
name = "nest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Brood project tooling — scaffolding, test discovery, user config."

[[bin]]
name = "nest"
path = "src/main.rs"

[dependencies]
brood = { path = "../lisp" }
# JSON-RPC framing for `nest mcp`: read/write `Content-Length:`-framed JSON
# messages over stdio (the same shape LSP uses). MCP's surface is small
# enough that we roll the framing ourselves rather than pull in an
# MCP/LSP-shaped crate + async runtime — see ADR-036 / docs/mcp.md.
serde_json = "1"
# Argument parsing + help text + subcommand routing. See the matching note
# in crates/cli/Cargo.toml — `nest` has more surface (run/test/check/format/
# new/doc/mcp/repl), so the win from derive-based subcommands is bigger.
clap = { version = "4", features = ["derive"] }

[features]
# Mirror cli's passthrough: `cargo build -p nest --features perf-stats` arms the
# VM work-attribution counters (`(vm-stats)` / `BROOD_PERF_STATS`) for profiling a
# real project workload (e.g. brood-edit redisplay) through `nest test`/`run`.
# Off by default — zero cost.
perf-stats = ["brood/perf-stats"]
