[package]
name = "nest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Brood project tooling — scaffolding, test discovery, user config."

[[bin]]
name = "nest"
path = "src/main.rs"

[dependencies]
brood = { path = "../lisp" }
# JSON-RPC for `nest mcp`: read/write newline-delimited JSON (one object per
# line) over stdio — the MCP stdio transport, NOT LSP's `Content-Length:` framing
# (that broke real MCP clients; see the regression test in mcp.rs). MCP's surface
# is small enough that we roll the framing ourselves rather than pull in an
# MCP/LSP-shaped crate + async runtime — see ADR-036 / docs/mcp.md.
serde_json = "1"
# Argument parsing + help text + subcommand routing. See the matching note
# in crates/cli/Cargo.toml — `nest` has more surface (run/test/check/format/
# new/doc/mcp/repl), so the win from derive-based subcommands is bigger.
clap = { version = "4", features = ["derive"] }

[features]
# Mirror cli's passthrough: `cargo build -p nest --features perf-stats` arms the
# VM work-attribution counters (`(vm-stats)` / `BROOD_PERF_STATS`) for profiling a
# real project workload (e.g. brood-edit redisplay) through `nest test`/`run`.
# Off by default — zero cost.
perf-stats = ["brood/perf-stats"]
# Forward the JIT (ADR-101) so `nest test`/`run` can exercise a real project
# workload through the JIT. Mirrors cli; off by default — zero cost when absent.
jit = ["brood/jit"]
