[package]
name = "brood-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared REPL for the Brood CLI binaries (cli, nest)."

[lib]
name = "brood_repl"
path = "src/lib.rs"

[dependencies]
brood = { path = "../lisp" }
# Line editing + history. CLI-only UX dep (ADR-005) — kept out of the brood
# lib so the LSP (which has no REPL) doesn't pay for it transitively.
rustyline = "18.0.0"
